# MCPRB

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml  skills-lock.json
core/: __init__.py  db_builder.py  file_reader.py  logs.py  module_catalog.py  module_validation.py  obsidian_exporter.py  paths.py  searcher.py  variables.py
tests/: test_db_builder.py  test_file_access.py  test_module_catalog.py
