[project]
name = "mcp-rocketbot"
version = "0.1.0"
description = "MCP para inspección de proyectos, logs y variables de Rocketbot Studio."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.8.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
